feat: refine mahjong modes and gameplay